# VFrown

./: .gitignore  CMakeLists.txt
src/: common.h  main.c  main_old.c
src/backend/: backend.c  backend.h  input.c  input.h  libs.c  libs.h  userSettings.c  userSettings.h
src/core/: vsmile.c
